src/test/testFiles/invalid/semanticErrors/invalidForLoopRange.manimdsl
let x = 1;
for (i in range(true)) {
    x = x + 1;
}